--- a/suap_oauth/templates/base.html
+++ b/suap_oauth/templates/base.html
@@ -1,15 +1,22 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>{% block title %} {% endblock %}</title>
-  </head>
-  <body>
-    <h1><a href="{{ url_for('index')}}">Login SUAP OAuth</a></h1>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>{% block title %}SUAP - Oauth{% endblock %}</title>
+    
+    <!-- Incluindo estilos e scripts -->
+    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/main1.css" rel="stylesheet">
+</head>
+<body>
 
     <div class="container">
         {% block content %} {% endblock %}
     </div>
 
-  </body>
+    <!-- Vendor JS Files -->
+    <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/main1.js"></script>
+</body>
 </html>
