--- a/suap_oauth/templates/user.html
+++ b/suap_oauth/templates/user.html
@@ -1,20 +1,127 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} {{ user_data['nome_usual'] }} {% endblock %}</h2>
-    <img src="{{ user_data['url_foto_150x200'] }}" alt="foto">
 
-    {% for field in user_data %}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>SUAP - oauth</title>
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+</head>
+<body class="index-page">
 
-    <p> <b>{{ field }}</b>: {{ user_data[field] }} </p>
+  <header id="header" class="header dark-background d-flex flex-column">
+    <div class="profile-img">
+      <img src="{{ user_data['url_foto_150x200'] }}" alt="foto" class="img-fluid rounded-circle">
+    </div>
 
-    {% endfor %}
-    <p>
+    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+      <h1 class="sitename">Alex Smith</h1>
+    </a>
+    <nav id="navmenu" class="navmenu">
+      <ul>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> Inicio</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Boletim</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main">
+    <section id="about" class="about section">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>{% block title %}SUAP - OAuth{% endblock %} </h2>
+        {% for field in user_data %}
+
+        <p> <b>{{ field }}</b>: {{ user_data[field] }} </p>
+    
+        {% endfor %}
+        <p>Magnam dolores commodi suscipit...</p>
+        <p><a href="{{url_for('logout')}}">Logout</a></p>
+
+      </div>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-4">
+            <img src="{{ user_data['url_foto_150x200'] }}" alt="foto" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 content">
+            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <p class="fst-italic py-3">Lorem ipsum dolor sit amet...</p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><strong>Birthday:</strong> <span>1 May 1995</span></li>
+                  <li><strong>Website:</strong> <span>www.example.com</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><strong>Age:</strong> <span>30</span></li>
+                  <li><strong>Degree:</strong> <span>Master</span></li>
+                </ul>
+              </div>
+            </div>
+            <p class="py-3">Officiis eligendi itaque labore et...</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume" class="resume section light-background">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Boletim</h2>
+            <p>
         <a href="{{ url_for('boletim') }}">
             <button>Visualizar Boletim</button>
         </a>
     </p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Sumary</h3>
+            <div class="resume-item pb-0">
+              <h4>Brandon Johnson</h4>
+              <p><em>Innovative and deadline-driven...</em></p>
+              <ul>
+                <li>Portland par 127,Orlando, FL</li>
+                <li>(123) 456-7891</li>
+                <li>alice.barkley@example.com</li>
+              </ul>
+            </div>
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h5>2015 - 2016</h5>
+              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Senior graphic design specialist</h4>
+              <h5>2019 - Present</h5>
+              <p><em>Experion, New York, NY </em></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    <p><a href="{{url_for('logout')}}">Logout</a></p>
-
+  <footer id="footer" class="footer position-relative">
+    <div class="container">
+      <div class="copyright text-center ">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+      </div>
+      <div class="credits">
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer>
+</body>
 {% endblock %}
