Projeto Final da Segunda Unidade de POS

--- a/suap_oauth/static/css/main1.css
+++ b/suap_oauth/static/css/main1.css
@@ -77,7 +77,7 @@
   
   .header {
     color: var(--default-color);
-    background-color: var(--background-color);
+    background-color: green;
     position: fixed;
     top: 0;
     left: 0;
