--- a/suap_oauth/templates/base.html
+++ b/suap_oauth/templates/base.html
@@ -8,6 +8,8 @@
     <!-- Incluindo estilos e scripts -->
     <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/main1.css" rel="stylesheet">
+    <link rel="icon" type="image/png"
+    href="static/images/icons/favicon.ico"/>
 </head>
 <body>
 
